--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,15 +28,6 @@
     <string name="title_not_connected">not connected</string>
     <string name="title_error">error <xliff:g id="error_name">%1$s</xliff:g></string>
     <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
-    <string name="textPID1">RPM: <xliff:g id="pid_val">%1$s</xliff:g></string>
-    <string name="textPID2">MAP: <xliff:g id="pid_val">%1$s</xliff:g></string>
-    <string name="textPID3">Ignition: <xliff:g id="pid_val">%1$s</xliff:g></string>
-    <string name="textPID4">Speed: <xliff:g id="pid_val">%1$s</xliff:g></string>
-    <string name="textPID5">IAT: <xliff:g id="pid_val">%1$s</xliff:g></string>
-    <string name="textPID6">Turbo: <xliff:g id="pid_val">%1$s</xliff:g></string>
-    <string name="textPID7">STFT: <xliff:g id="pid_val">%1$s</xliff:g></string>
-    <string name="textPID8">ON: <xliff:g id="pid_val">%1$s</xliff:g></string>
-    <string name="textVIN">VIN: <xliff:g id="vin_val">%1$s</xliff:g></string>
-
-
+    <string name="textPID"><xliff:g id="pid_str">%1$s</xliff:g>: <xliff:g id="pid_val">%2$f</xliff:g> <xliff:g id="pid_unit">%3$s</xliff:g></string>
+    <string name="textVIN">VIN: <xliff:g id="vin_str">%1$s</xliff:g></string>
 </resources>
