Added new logging mode

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="back">Back</string>
     <string name="stop_log">Stop</string>
     <string name="start_log">Start</string>
+    <string name="reset">Reset</string>
     <!-- Strings used for misc -->
     <string name="bt_status">Bluetooth: </string>
     <string name="bt_connect">Connect</string>
@@ -29,6 +30,6 @@
     <string name="title_not_connected">not connected</string>
     <string name="title_error">error <xliff:g id="error_name">%1$s</xliff:g></string>
     <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
-    <string name="textPID"><xliff:g id="pid_str">%1$s</xliff:g>: <xliff:g id="pid_val">%2$s</xliff:g> <xliff:g id="pid_unit">%3$s</xliff:g></string>
+    <string name="textPID"><xliff:g id="pid_str">%1$s</xliff:g>: <xliff:g id="pid_val">%2$s</xliff:g>:<xliff:g id="pid_unit">%3$s</xliff:g> <xliff:g id="pid_unit">%4$s</xliff:g></string>
     <string name="textVIN">VIN: <xliff:g id="vin_str">%1$s</xliff:g></string>
 </resources>
