--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,17 +12,22 @@
     <string name="logging_fragment">Logging Fragment</string>
     <string name="settings_fragment">Settings Fragment</string>
     <!-- Strings used for buttons -->
-    <string name="exit_app">Exit</string>
-    <string name="flashing">Flashing</string>
-    <string name="logging">Logging</string>
-    <string name="send">Send</string>
-    <string name="send_file">Send File</string>
-    <string name="back">Back</string>
-    <string name="stop_log">Stop</string>
-    <string name="start_log">Start</string>
-    <string name="reset">Reset</string>
-    <string name="settings">Settings</string>
+    <string name="button_exit">Exit</string>
+    <string name="button_flashing">Flashing</string>
+    <string name="button_logging">Logging</string>
+    <string name="button_send">Send</string>
+    <string name="button_send_file">Send File</string>
+    <string name="button_back">Back</string>
+    <string name="button_stop">Stop</string>
+    <string name="button_start">Start</string>
+    <string name="button_reset">Reset</string>
+    <string name="button_settings">Settings</string>
+    <string name="button_save">Save</string>
+    <!-- Strings used for radio buttons -->
+    <string name="radio_settings_mode_3E">3E</string>
+    <string name="radio_settings_mode_22">22</string>
     <!-- Strings used for misc -->
+    <string name="textview_settings_mode">Logging Mode:</string>
     <string name="bt_status">Bluetooth: </string>
     <string name="bt_connect">Connect</string>
     <string name="bt_disconnect">Disconnect</string>
