--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,9 +26,13 @@
     <!-- Strings used for radio buttons -->
     <string name="radio_settings_mode_3E">3E</string>
     <string name="radio_settings_mode_22">22</string>
+    <string name="radio_settings_mode_downloads">Downloads</string>
+    <string name="radio_settings_mode_documents">Documents</string>
+    <string name="radio_settings_mode_application">Application</string>
     <!-- Strings used for misc -->
     <string name="textview_settings_updaterate">Display update rate: <xliff:g id="rate">%1$d</xliff:g></string>
     <string name="textview_settings_mode">Logging Mode:</string>
+    <string name="textview_settings_directory">Output Directory:</string>
     <string name="bt_status">Bluetooth: </string>
     <string name="bt_connect">Connect</string>
     <string name="bt_disconnect">Disconnect</string>
