--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,9 @@
     <string name="button_reset">Reset</string>
     <string name="button_settings">Settings</string>
     <string name="button_save">Save</string>
+    <!-- Strings used for checkboxes -->
+    <string name="check_settings_invert_cruise">Invert cruise button?</string>
+    <string name="check_settings_screen_on">Keep screen on?</string>
     <!-- Strings used for radio buttons -->
     <string name="radio_settings_mode_3E">3E</string>
     <string name="radio_settings_mode_22">22</string>
@@ -33,6 +36,7 @@
     <string name="textview_settings_updaterate">Display update rate: <xliff:g id="rate">%1$d</xliff:g></string>
     <string name="textview_settings_mode">Logging Mode:</string>
     <string name="textview_settings_directory">Output Directory:</string>
+    <string name="textview_fps">fps: </string>
     <string name="bt_status">Bluetooth: </string>
     <string name="bt_connect">Connect</string>
     <string name="bt_disconnect">Disconnect</string>
